Add sample HTML structure and JavaScript for user input handling

--- a/HTML CSS/sample.html
+++ b/HTML CSS/sample.html
@@ -1,20 +1,12 @@
 <html>
     <title>Sample HTML</title>
-
-    <h1>Practice HTML</h1>
-    <p>Sample Body Paragraph</p>
+    <head></head>
     <body>
-    <button id="myButton">Click Me</button>
+        <h1 id="txtHello">Hello User</h1>
+        <label>username: </label>
+        <input id="myText"><br><br>
+        <button id="btnSubmit">Submit</button>
 
-    <label for = "cars">Choose a Car</label>
-    <select id = "cars" name = cars>
-        <option id = "Sports Car">Sports Car</option>
-        <option id = "Kariton">Kariton</option>
-        <option id = "Ceres">Ceres</option>
-    <input type="radio" id="pink" name="pink" value="pink">
-    <label for="pink">Pink</label>
-    <input type="radio" id="blue" name="blue "value="blue">
-    <label for="blue">Blue</label>
-    <script src="sample.js"></script>
+        <script src="..\JS\input.js"></script>
     </body>
 </html>
